--- a/WebviewTest/en.lproj/MainStoryboard.storyboard
+++ b/WebviewTest/en.lproj/MainStoryboard.storyboard
@@ -1,9 +1,67 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="OQL-zq-bd0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="OQL-zq-bd0">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
+        <!--Ichartjs Line View Controller - ichartjs_line-->
+        <scene sceneID="9Lw-bq-AEh">
+            <objects>
+                <viewController id="6Js-eb-72p" customClass="ichartjsLineViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H1n-gM-ppz">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z68-dv-kO3">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Z68-dv-kO3" firstAttribute="leading" secondItem="H1n-gM-ppz" secondAttribute="leading" type="default" id="2gE-Ev-DLe"/>
+                            <constraint firstItem="Z68-dv-kO3" firstAttribute="bottom" secondItem="H1n-gM-ppz" secondAttribute="bottom" type="default" id="C8j-Dd-Ngj"/>
+                            <constraint firstItem="Z68-dv-kO3" firstAttribute="top" secondItem="H1n-gM-ppz" secondAttribute="top" type="default" id="RIr-KN-Ox7"/>
+                            <constraint firstItem="Z68-dv-kO3" firstAttribute="trailing" secondItem="H1n-gM-ppz" secondAttribute="trailing" type="default" id="klO-By-aYI"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="ichartjs_line" id="cnt-Ur-ntQ"/>
+                    <connections>
+                        <outlet property="webview" destination="Z68-dv-kO3" id="6bc-Hp-4g8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0AE-Wl-Ns2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-9" y="1012"/>
+        </scene>
+        <!--Ichartjs Pie View Controller - ichartjs_pie-->
+        <scene sceneID="kF3-5K-67O">
+            <objects>
+                <viewController id="27L-IT-ZcS" customClass="ichartjsPieViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RyR-Tu-az9">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQo-3X-PbV">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IQo-3X-PbV" firstAttribute="trailing" secondItem="RyR-Tu-az9" secondAttribute="trailing" type="default" id="AJH-gS-buZ"/>
+                            <constraint firstItem="IQo-3X-PbV" firstAttribute="bottom" secondItem="RyR-Tu-az9" secondAttribute="bottom" type="default" id="QoX-cp-FHV"/>
+                            <constraint firstItem="IQo-3X-PbV" firstAttribute="top" secondItem="RyR-Tu-az9" secondAttribute="top" type="default" id="YpM-hh-Nvh"/>
+                            <constraint firstItem="IQo-3X-PbV" firstAttribute="leading" secondItem="RyR-Tu-az9" secondAttribute="leading" type="default" id="rKx-wY-fIg"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="ichartjs_pie" id="bhL-gJ-7i1"/>
+                    <connections>
+                        <outlet property="webview" destination="IQo-3X-PbV" id="jJz-yq-uOh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LQv-19-LGN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="428" y="1012"/>
+        </scene>
         <!--Pie View Controller - Pie-->
         <scene sceneID="ahP-3y-knz">
             <objects>
@@ -66,7 +124,7 @@
         <scene sceneID="mdi-Bv-6lS">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="OQL-zq-bd0" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="eeX-jU-f9I">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -75,6 +133,8 @@
                     <connections>
                         <segue destination="D89-Ke-6G4" kind="relationship" relationship="viewControllers" id="ie7-ld-66p"/>
                         <segue destination="kmV-DL-K44" kind="relationship" relationship="viewControllers" id="xXz-PY-vGg"/>
+                        <segue destination="6Js-eb-72p" kind="relationship" relationship="viewControllers" id="t2M-fh-6zk"/>
+                        <segue destination="27L-IT-ZcS" kind="relationship" relationship="viewControllers" id="Mk1-9w-mV6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o6i-ez-M2C" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -82,6 +142,32 @@
             <point key="canvasLocation" x="-90" y="16"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="LineViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LineViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webview" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PieViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PieViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webview" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="ichartjsLineViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ichartjsLineViewController.h"/>
+        </class>
+        <class className="ichartjsPieViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ichartjsPieViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webview" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
